# NLP-ready

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  elsevier.ipynb  pyproject.toml  requirements.txt  selenium.ipynb  tox.ini
csv/: croppal-j.csv  croppal-journals.csv  croppal.csv  croptips-journals.csv  croptips.csv  exp-locations.csv
mlcode/: ascb.py  aspb.py  bbb.py  bioj.py  bmcpb.py  cell.py  config.py  dev.py  doi.py  doubles.py  download.py  elife.py  elsevier.py  emboj.py  epmc.py  fpls.py  gad.py  genetics.py  issn.py  issnmap.pkl  jbc.py  jcounts.csv  jcs.py  jnlactive.csv  journals.csv  jproteome.py  mcp.py  mdpi.py  mlabc.py  mpmi.py  nature.py  oup.py  plos.py  pnas.py  rescantxt.py  science.py  selen.py  springer.py  suba_papers.csv  summary.py  (+3 more)
mlcode/templates/: index.html  template.html
nlpready/: __main__.py  _cli.py  _config.py  _download.py  _issn.py  _mlabc.py  _rescantxt.py  _selenium.py  _summary.py  _types.py  _utils.py  ascb.py  aspb.py  bbb.py  bioj.py  bmcpb.py  cell.py  config.py  dev.py  doi.py  download.py  elife.py  elsevier.py  elsevier.py.save  emboj.py  epmc.py  fpls.py  gad.py  genetics.py  issn.py  jbc.py  jcs.py  jproteome.py  mcp.py  mdpi.py  mlabc.py  mpmi.py  nature.py  oup.py  plos.py  (+7 more)
nlpready/epmc/: epmc.py  utils.py
nlpready/templates/: index.html  template.html
scifeeder/: __main__.py  _issn.py  _selenium.py  cache.py  cli.py  config.py  epmc.py  issn.py  ncbi.py  runner.py  selenium_cls.py  soup.py  types.py  utils.py
