[tool.poetry]
name = "scifeeder"
version = "0.1.0"
description = ""
authors = ["arabidopsis <ian.castleden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# jinja2 = "^3.1.6"
click = "^8.1.8"
requests = "^2.32.3"
lxml = "^5.4.0"
beautifulsoup4 = "^4.13.0"
selenium = "^4.32.0"
# tabulate = "^0.9.0"
html-to-markdown = "^1.3.2"
tqdm = "^4.67.1"
undetected-chromedriver = "^3.5.5"
selenium-stealth = "^1.0.6"

[tool.poetry.scripts]
scifeeder = "scifeeder.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
